fixed Firefox layout issue

--- a/Fading Suns 2nd Edition Revised/Fading_Suns_2nd_Edition_Revised.css
+++ b/Fading Suns 2nd Edition Revised/Fading_Suns_2nd_Edition_Revised.css
@@ -1072,8 +1072,9 @@ input.sheet-fs-dot[value="20"] ~ button.sheet-fs-gt-20 > span.sheet-fs-checked {
     align-items: center;
     justify-content: flex-start;
     align-self: stretch;
-    overflow: hidden;
-    text-overflow: ellipsis;
+
+    position: relative;
+    overflow: visible;
 }
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice {
     display: none;
@@ -1082,12 +1083,13 @@ input.sheet-fs-dot[value="20"] ~ button.sheet-fs-gt-20 > span.sheet-fs-checked {
 .sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover {
     position: absolute;
     z-index: 5;
+    top: 1px;
+    left: 26px;
+    
     background-color: #ffffff;
     border-radius: 5px;
     border: 1px solid rgb(15, 9, 9);
     padding: 2px;
-    margin-left: 26px;
-    margin-top: 118px; /* prev 41px; */
     width: max-content;
     /*background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Fading%20Suns%20v2.75/images/background1.jpg) top left repeat;
     background-attachment: fixed;*/
